TODO: fix termination condition, GUI output [both in musthave transition]. The end is near, I hope.